--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "body-parser": "^1.20.0",
     "core-js": "^3.19.3",
+    "express": "^4.17.3",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
